<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/white">

        <!-- Top Button Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Close Button (Top Left) -->
            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/close"
                android:scaleType="fitCenter"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/close"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <!-- Bookmark Button (Top Right) -->
            <ImageButton
                android:id="@+id/btnBookmark"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/bookmark"
                android:scaleType="fitCenter"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/bookmark"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- ScrollView below the buttons -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/topButtonContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <!-- Product Image (Square Shape) -->
                <!-- Product Image -->
                <ImageView
                    android:id="@+id/categoryImage"
                    android:layout_width="172dp"
                    android:layout_height="57dp"
                    app:srcCompat="@drawable/default_image" />

                <ImageView
                    android:id="@+id/item_photo"
                    android:layout_width="match_parent"
                    android:layout_height="700dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/notes1"
                    app:layout_constraintDimensionRatio="1:1" /> <!-- 1:1 aspect ratio for square -->

                <!-- Price & Name -->
                <TextView
                    android:id="@+id/productPrice"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_price"
                    android:textSize="50sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingTop="8dp"/>

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comp_3350_notes"
                    android:textSize="50sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <!-- Category Label -->
                <TextView
                    android:id="@+id/categoryLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_notes"
                    android:textSize="30sp"
                    android:textColor="#696969"/>

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical">

                    <!-- Mode of Payment Label (Static Text) -->
                    <TextView android:id="@+id/paymentModeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mode_of_payment"
                        android:textSize="30sp"
                        android:textColor="#696969"
                        android:paddingEnd="16dp"/>

                    <!-- Display Payment Type (Static, Non-Editable) -->
                    <TextView android:id="@+id/paymentModeValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/payment_type"
                        android:textSize="30sp"
                        android:textColor="@color/black"/>

                </LinearLayout>


                <!-- Divider Line -->
                <View
                    android:layout_marginTop="20dp"
                    android:layout_width="200dp"
                    android:layout_height="4dp"
                    android:background="#696969"
                    app:layout_constraintWidth_percent="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/categoryLabel"/>

                <!-- Description Block -->
                <TextView
                    android:id="@+id/descriptionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:paddingTop="12dp"/>

                <TextView
                    android:id="@+id/productDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes_desc"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:paddingTop="4dp"/>

                <TextView
                    android:id="@+id/productCondition"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/condition_new"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:paddingTop="4dp"/>

                <!-- Divider Line (80% Width) -->
                <View
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="#696969"/>

                <!-- Seller Information Card -->
                <TextView
                    android:id="@+id/sellerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seller"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:paddingTop="12dp"/>

                <!-- Seller Name -->
                <TextView
                    android:id="@+id/sellerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="4dp"/>

                <!-- Seller Email -->
                <TextView
                    android:id="@+id/sellerEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_email"
                    android:textSize="30sp"
                    android:layout_marginBottom="4dp"/>

                <!-- Seller Contact -->
                <TextView
                    android:id="@+id/sellerContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_phone"
                    android:textSize="30sp"/>

                <!-- Divider Line (80% Width) -->
                <View
                    android:layout_marginTop="20dp"
                    android:layout_width="1000dp"
                    android:layout_height="4dp"
                    android:background="#696969"
                    app:layout_constraintWidth_percent="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productCondition"/>

                <!-- Add a TextView for the related items heading -->
                <TextView
                    android:id="@+id/relatedItemsHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/related_items"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/relatedItemsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>